user module alignment issues

--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -101,7 +101,7 @@ a:hover {
   width: 6px;
     height: 6px;
     border-radius:25px;
-    opacity: 0!important;
+    opacity: 1!important;
 }
 
 /* Track */
@@ -1636,7 +1636,7 @@ a:hover {
     font-size: 16px;
     min-height: 26px;
     font-weight: 700;
-    text-overflow: ellipsis;
+    /*text-overflow: ellipsis;*/
     overflow: hidden;
     max-width: 100%;
     white-space: nowrap;
